--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6000,8 +6000,8 @@
     <!-- Statusbar native battery percent -->
     <string name="general_string">General</string>
     <string name="status_bar_title">Status bar</string>
-    <string name="status_bar_native_battery_percentage_title">Battery percentage</string>
-    <string name="status_bar_native_battery_percentage_summary">Show hidden percentage</string>
+    <string name="status_bar_native_battery_percentage_title">Show Battery Percentage</string>
+    <string name="status_bar_native_battery_percentage_summary">Show battery level percentage at status bar</string>
 
     <!--  Volume rocker -->
     <string name="volume_rocker_screen_title">Volume rocker</string>
