--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5987,6 +5987,10 @@
 
     <!-- Navigation Bar Height -->
     <string name="navigation_bar_height">Height</string>
+    <string name="navigation_bar_height_56">56dp</string>
+    <string name="navigation_bar_height_54">54dp</string>
+    <string name="navigation_bar_height_52">52dp</string>
+    <string name="navigation_bar_height_50">50dp</string>
     <string name="navigation_bar_height_48">48dp (default)</string>
     <string name="navigation_bar_height_44">44dp</string>
     <string name="navigation_bar_height_40">40dp</string>
